--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@
    --color-fill: #8E8F99;
    --color-footer-hover: #31D0AA;
    --color-modal: #FCFCFC;
-/* delete comment */
+
 }
 
 body {
@@ -489,6 +489,7 @@ button {
 
 .footer-container {
    display: flex;
+   /* justify-content: space-between; */
 }
 
 .footer-media {
@@ -537,6 +538,63 @@ button {
 .footer-icon {
    width: 24px;
    height: 24px;
+}
+
+/* footer form */
+
+.subscribe-form {
+   margin-left: 88px;
+}
+
+.subscribe-tittle {
+   font-size: 16px;
+   font-weight: 500;
+   line-height: 1.5;
+   letter-spacing: 0.02em;
+   color: var(--background-color);
+   margin-bottom: 16px;
+}
+
+.subscribe-field {
+   display: flex;
+   align-items: center;
+   gap: 24px;
+}
+
+
+.mail-input {
+   width: 264px;
+   height: 40px;
+   padding-top: 8px;
+   padding-bottom: 8px;
+   padding-left: 16px;
+   font-size: 12px;
+   line-height: 2;
+   background-color: transparent;
+   color: var(--footer-text-color);
+   border: 1px solid rgba(255, 255, 255, 0.3);
+   border-radius: 4px;
+
+}
+
+.subscribe-button {
+   padding: 8px 24px;
+   gap: 16px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   font-weight: 500;
+   color: var(--background-color);
+   background-color: var(--color-logo-btn);
+   border-radius: 4px;
+   border-color: var(--color-logo-btn);
+  
+}
+
+.subscribe-icon {
+   width: 24px;
+   height: 24px;
+   fill: currentColor;
 }
 
 /*Portfolio*/
