--- a/css/styles.css
+++ b/css/styles.css
@@ -543,10 +543,11 @@ button {
 /* footer form */
 
 .subscribe-form {
-   margin-left: 88px;
+   margin-left: 80px;
 }
 
 .subscribe-tittle {
+   margin-left: 80px;
    font-size: 16px;
    font-weight: 500;
    line-height: 1.5;
@@ -728,6 +729,7 @@ button {
    height: 100%;
    background-color: var(--color-modal);
    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   padding: 72px 24px 24px 24px;
 }
 
 .backdrop.is-hidden .modal {
