--- a/css/styles.css
+++ b/css/styles.css
@@ -588,8 +588,13 @@ button {
    color: var(--background-color);
    background-color: var(--color-logo-btn);
    border-radius: 4px;
-   border-color: var(--color-logo-btn);
-  
+   border-color: transparent;
+   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.subscribe-button:hover,
+.subscribe-button:focus {
+   background-color: var(--color-nav-hover);
 }
 
 .subscribe-icon {
@@ -771,3 +776,154 @@ button {
    transform: translate(-50%, -50%);
 }
 
+.modal-tittle {
+   text-align: center;
+   font-weight: 500;
+   font-size: 16px;
+   line-height: 1.5;
+   letter-spacing: 0.02em;
+   color: var(--color-primary);
+   margin-bottom: 16px;
+}
+
+.modal-item {
+   position: relative;
+   margin-bottom: 8px;
+}
+
+.modal-label {
+   display: flex;
+   flex-direction: column;
+   gap: 4px;
+   font-size: 12px;
+   letter-spacing: 0.04em;
+   line-height: 1.17;
+   color: var(--color-fill);
+}
+
+.modal-input {
+   padding-top: 11px;
+   padding-bottom: 11px;
+   padding-right: 15px;
+   padding-left: 38px;
+
+   border: 1px solid rgba(33, 33, 33, 0.2);
+   border-radius: 4px;
+   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input:focus {
+   border: 1px solid var(--color-logo-btn);
+   outline: none;
+}
+
+
+.modal-icon {
+   position: absolute;
+   top: 50%;
+   left: 15px;
+   fill: var(--color-primary);
+   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1)
+}
+
+.modal-input:focus + .modal-icon {
+   fill: var(--color-logo-btn);
+}
+
+.comment-lable {
+   font-size: 12px;
+   line-height: 1.17;
+   letter-spacing: 0.01em;
+   color: var(--color-fill);
+
+   margin-bottom: 16px;
+}
+
+.form-comment {
+   resize: none;
+   padding: 8px 16px;
+   width: 100%;
+   height: 120px;
+   border: 1px solid rgba(33, 33, 33, 0.2);
+   border-radius: 4px;
+   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-comment::placeholder {
+   color: rgba(117, 117, 117, 0.5);
+}
+
+.form-comment:focus {
+   border: 1px solid var(--color-logo-btn);
+   outline: none;
+}
+
+.modal-checkbox {
+   font-size: 12px;
+   line-height: 1.17; 
+   letter-spacing: 0.04em;
+    color: #757575;
+}
+
+.accept-checkbox {
+   position: absolute;
+   appearance: none;
+}
+
+.accept-text {
+   padding-left: 8px;
+}
+
+.checkbox-icon {
+   width: 10px;
+   height: 8px;
+   fill: var(--background-color);
+}
+
+.check-box {
+   display: inline-flex;
+   justify-content: center;
+   align-items: center;
+   width: 16px;
+   height: 16px;
+   overflow: hidden;
+   border: 1.25px solid var(--color-primary);
+   border-radius: 2px;
+   background-color: var(--background-color);
+   background-repeat: no-repeat;
+   background-origin: content-box;
+   background-position: 50% 50%;
+}
+
+.accept-checkbox:checked + .check-box {
+   background-color: var(--color-nav-hover);
+   border: 1.25px solid var(--color-nav-hover);
+}
+
+.accept-checkbox:checked +.check-box + .checkbox-icon {
+   fill: var(--color-nav-hover);
+} 
+
+.policy-link {
+   color: var(--color-logo-btn);
+}
+
+.form-button {
+   display: flex;
+   align-content: center;
+   justify-content: center;
+   margin: 24px auto 24px auto;
+   padding: 16px 32px;
+   width: 170px;
+   font-weight: 500;
+   color: var(--background-color);
+   background-color: var(--color-logo-btn);
+   border-radius: 4px;
+   border-color: transparent;
+   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-button:hover,
+.form-button:focus {
+   background-color: var(--color-nav-hover);
+}
